wrapper script plus modifications to make it work
- cd to the data dir (the app uses the CWD for the data base)
- use correct contentfolder prefix
- set log level

Assisted-by: Gemini3 via t3.chat